hphp/hack/test/typecheck/control_flow/do_break_fake.php.exp
File "do_break_fake.php", line 13, characters 14-22:
Invalid argument (Typing[4110])
File "do_break_fake.php", line 6, characters 21-23:
This is an int
File "do_break_fake.php", line 4, characters 17-20:
It is incompatible with a nullable type
